2024-07-22  Bruno Haible  <bruno@clisp.org>

	build: Simplify last change.
	* Makefile.in (doc/gperf.1): Simplify rule.

2024-07-21  Bruno Haible  <bruno@clisp.org>

	build: Fix failure of "./configure; make dist".
	* Makefile.in (srcdir, VPATH): New variables.
	(VERSION): Refer to src/version.cc in $(srcdir).
	(dist): Depend on doc/gperf.1.
	(doc/gperf.1): New rule.
	* doc/Makefile.in (DISTRIBUTED_BUILT_FILES): Remove wildcard patterns.
	(DISTRIBUTED_BUILT_FILES_EXTRA_PATTERNS): New variable.
	(distdir): Handle the files from DISTRIBUTED_BUILT_FILES_EXTRA_PATTERNS.

2024-07-21  Bruno Haible  <bruno@clisp.org>

	build: Don't leave an empty gperf.1 on disk if help2man fails.
	* doc/Makefile.in (gperf.1): Use a temporary file.
	(clean): Remove this temporary file.

2024-07-21  Bruno Haible  <bruno@clisp.org>

	build: Fix VPATH builds.
	* doc/Makefile.in (TEXINFO): Look up texi2html in the current directory.
	(gperf.1): Look up help2man in the source directory. Generate gperf.1 in
	the source directory.

2024-07-21  Bruno Haible  <bruno@clisp.org>

	build: Fix use of perl on Guix, FreeBSD, NetBSD.
	* doc/help2man: Search for perl in $PATH.

2024-07-21  Bruno Haible  <bruno@clisp.org>

	build: Fix "make maintainer-clean".
	* doc/Makefile.in (maintainer-clean): Remove also gperf.1.

2024-06-12  Collin Funk  <collin.funk1@gmail.com>

	doc: Make the detailed menu title appear as intended.
	* doc/gperf.texi (Top): Add a line break after @detailmenu.

2024-06-05  Bruno Haible  <bruno@clisp.org>

	Fix build (regression 2024-04-04).
	Reported by Pádraig Brady <P@draigBrady.com> in
	<https://lists.gnu.org/archive/html/bug-gperf/2024-06/msg00000.html>.
	* doc/configure.ac: Invoke AC_CONFIG_AUX_DIR, needed for locating
	install-sh.
	* lib/configure.ac: Likewise.
	* src/configure.ac: Likewise.
	* tests/configure.ac: Likewise.

2024-04-04  Bruno Haible  <bruno@clisp.org>

	Remove outdated Autoconf macro.
	* aclocal.m4 (CL_PROG_INSTALL): Remove macro.