@@ -1,3 +1,9 @@
+2024-09-01  Bruno Haible  <bruno@clisp.org>
+
+	Replace FSF snail-mail addresses with URLs.
+	* tests/java.gperf: Update GPL license notice.
+	* tests/java.exp: Likewise.
+
 2024-07-22  Bruno Haible  <bruno@clisp.org>
 
 	build: Simplify last change.
